2010-04-28  Evan Martin  <evan@chromium.org>

        Reviewed by Adam Roben.

        rebaseline for fast/text/international/bold-bengali
        https://bugs.webkit.org/show_bug.cgi?id=38281

        * platform/win/fast/text/international/bold-bengali-actual.txt: Added.

2010-04-21  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adele Peterson.

        http://trac.webkit.org/changeset/57215 caused perf/memory regressions
        https://bugs.webkit.org/show_bug.cgi?id=37292

        #if out the canUseGlyphCache Changes from r57215 as they caused a 
        8% perf regression on Chromium's international page load tests so that
        the perf regression can be fixed properly without being left in the tree.

        * platform/mac/fast/repaint/stacked-diacritics-expected.checksum:
        * platform/mac/fast/repaint/stacked-diacritics-expected.png:

2010-04-28  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=38278
        https://localhost:8443 doesn't work in WebKit tests

        We only had a VirtualHost for 127.0.0.1:8443. Changed that to *:8443.

        * http/conf/apache2-debian-httpd.conf:
        * http/conf/apache2-httpd.conf:
        * http/conf/fedora-httpd.conf:
        * http/conf/httpd.conf:

2010-04-28  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Failing test http/tests/misc/isindex-with-no-form.html
        https://bugs.webkit.org/show_bug.cgi?id=30815

        The test currently works, removing from Skipped.

        * platform/gtk/Skipped:

2010-04-28  Evan Martin  <evan@chromium.org>

        Reviewed by Darin Adler.

        fast/text/international/bold-bengali needs baselines
        https://bugs.webkit.org/show_bug.cgi?id=38273

        * platform/chromium-win/fast/text/international/bold-bengali-expected.checksum: Added.
        * platform/chromium-win/fast/text/international/bold-bengali-expected.png: Added.