@@ -1,0 +1,4 @@
+Test that a resource from a different https origin is not cached.
+
+PASS
+
