@@ -1,0 +1,3 @@
+CACHE MANIFEST
+CACHE:
+https://localhost:8443/appcache/resources/simple.txt
